--- a/ECET230.ioc
+++ b/ECET230.ioc
@@ -201,7 +201,7 @@ PA15\ (JTDI).GPIO_Label=ARD_D9
 PA15\ (JTDI).Locked=true
 PA15\ (JTDI).Signal=GPIO_Output
 PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=ARD_D10 [SPI_SSN]
+PA2.GPIO_Label=ARD_D10
 PA2.Locked=true
 PA2.Signal=GPIO_Output
 PA3.GPIOParameters=GPIO_Label
@@ -213,17 +213,17 @@ PA4.GPIO_Label=ARD_D7
 PA4.Locked=true
 PA4.Signal=GPIO_Input
 PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=ARD_D13 [SPI1_SCK]
+PA5.GPIO_Label=ARD_D13
 PA5.Locked=true
-PA5.Signal=SPI1_SCK
+PA5.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=ARD_D12 [SPI1_MISO]
+PA6.GPIO_Label=ARD_D12
 PA6.Locked=true
-PA6.Signal=SPI1_MISO
+PA6.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=ARD_D11 [SPI1_MOSI]
+PA7.GPIO_Label=ARD_D11
 PA7.Locked=true
-PA7.Signal=SPI1_MOSI
+PA7.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=SPBTLE_RF_RST
 PA8.Locked=true
