--- a/ECET230.ioc
+++ b/ECET230.ioc
@@ -56,9 +56,10 @@ KeepUserPlacement=false
 Mcu.Family=STM32L4
 Mcu.IP0=ADC1
 Mcu.IP1=DFSDM1
-Mcu.IP10=USART1
-Mcu.IP11=USART3
-Mcu.IP12=USB_OTG_FS
+Mcu.IP10=TIM3
+Mcu.IP11=USART1
+Mcu.IP12=USART3
+Mcu.IP13=USB_OTG_FS
 Mcu.IP2=DMA
 Mcu.IP3=I2C2
 Mcu.IP4=NVIC
@@ -66,8 +67,8 @@ Mcu.IP5=QUADSPI
 Mcu.IP6=RCC
 Mcu.IP7=SPI3
 Mcu.IP8=SYS
-Mcu.IP9=TIM3
-Mcu.IPNb=13
+Mcu.IP9=TIM2
+Mcu.IPNb=14
 Mcu.Name=STM32L475V(C-E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -211,11 +212,11 @@ PA14\ (JTCK-SWCLK).Signal=SYS_JTCK-SWCLK
 PA15\ (JTDI).GPIOParameters=GPIO_Label
 PA15\ (JTDI).GPIO_Label=ARD_D9
 PA15\ (JTDI).Locked=true
-PA15\ (JTDI).Signal=GPIO_Output
+PA15\ (JTDI).Signal=S_TIM2_CH1
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=ARD_D10
 PA2.Locked=true
-PA2.Signal=GPIO_Output
+PA2.Signal=S_TIM2_CH3
 PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=ARD_D4
 PA3.Locked=true
@@ -644,6 +645,10 @@ SH.S_CKOUTDFSDM1.1=DFSDM1_CKOUT,PDM_SPI_Input_from_ch12_and_Internal_Clock
 SH.S_CKOUTDFSDM1.ConfNb=2
 SH.S_DATAIN2DFSDM1.0=DFSDM1_DATIN2,PDM_SPI_Input_from_ch12_and_Internal_Clock
 SH.S_DATAIN2DFSDM1.ConfNb=1
+SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1.ConfNb=1
+SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
+SH.S_TIM2_CH3.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
@@ -902,6 +907,11 @@ STMicroelectronics.X-CUBE-MEMS1.7.0.0_NumberOfMw=1
 STMicroelectronics.X-CUBE-MEMS1.7.0.0_SwParameter=MEMSCcBoardOoComponentJjAccGyrJjLSM6DSL\:I2C;ApplicationCcDeviceJjApplication\:DataLogTerminal;STM32CubeIiCustomIiBSPIiDriversCcBoardOoSupportJjCustomJjENVIiSENSOR\:true;MEMSCcBoardOoComponentJjHumTempJjHTS221\:I2C;MEMSCcBoardOoComponentJjMagJjLIS3MDL\:I2C;MEMSCcBoardOoComponentJjPressTempJjLPS22HB\:I2C;STM32CubeIiCustomIiBSPIiDriversCcBoardOoSupportJjCustomJjMOTIONIiSENSOR\:true;
 STMicroelectronics.X-CUBE-MEMS1.7.0.0_description=Drivers and sample applications for MEMS components
 STMicroelectronics.X-CUBE-MEMS1.7.0.0_license=en.DM00367782.pdf
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation3 CH3,Prescaler,Period
+TIM2.Period=500
+TIM2.Prescaler=80
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation4 CH4
